--- a/autotrain_with_llm/ui/templates/index.html
+++ b/autotrain_with_llm/ui/templates/index.html
@@ -33,7 +33,10 @@
               <a class="nav-link" aria-current="page" href="/logs_screen">Logs Gerados</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/test_model">Testar Modelo</a>
+              <a class="nav-link" aria-current="page" href="/result_model">Verificar resultado do Modelo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/result_model">Testar modelo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/source_code">Código Fonte</a>
