--- a/autotrain_with_llm/ui/templates/logs.html
+++ b/autotrain_with_llm/ui/templates/logs.html
@@ -8,7 +8,8 @@
         <li class="active">Configuração do Modelo</li>
         <li class="active">Confirmação dos Parâmetros</li>
         <li class="active">Treinamento do Modelo</li>
-        <li>Treinamento Finalizado</li>
+        <li>Resultado do Modelo</li>
+        <li>Testes com o Modelo</li>
     </ul>
 </div>
 <h4 class="title-page">Logs</h4>
