--- a/autotrain_with_llm/ui/statics/styles/drag_drop_input_file.css
+++ b/autotrain_with_llm/ui/statics/styles/drag_drop_input_file.css
@@ -76,3 +76,17 @@ p.format-available {
     font-size: 11px;
     margin-top: 4px;
 }
+
+.drop-zone img.imported-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 0;
+    opacity: 0.8;
+    transition: opacity 500ms;
+    object-fit: cover;
+}
+
+.file-input:hover .drop-zone > img.imported-img {
+    opacity: 0.1;
+}
