--- a/autotrain_with_llm/ui/statics/styles/index.css
+++ b/autotrain_with_llm/ui/statics/styles/index.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 nav {
-    display: none !important;
+    /* display: none !important; */
 }
 
 .title-page {
@@ -52,7 +52,7 @@ i {
     text-transform: uppercase;
     font-size: 12px;
     float: left;
-    width: 25%;
+    width: 20%;
     position: relative;
 }
 
