--- a/autotrain_with_llm/ui/templates/dataset.html
+++ b/autotrain_with_llm/ui/templates/dataset.html
@@ -8,7 +8,8 @@
     <li class="active">Configuração do Modelo</li>
     <li class="active">Confirmação dos Parâmetros</li>
     <li>Treinamento do Modelo</li>
-    <li>Treinamento Finalizado</li>
+    <li>Resultado do Modelo</li>
+    <li>Testes com o Modelo</li>
   </ul>
 </div>
 
