Removed navbar and adjusted model result layout

--- a/autotrain_with_llm/ui/templates/logs.html
+++ b/autotrain_with_llm/ui/templates/logs.html
@@ -18,9 +18,9 @@
         <button id="clean-log" type="submit"><i class="bi bi-eraser"></i>Limpar Logs</button>
     </form>
     <pre id="log-content"><code id="python-code" class="language-python">{{ function_code }}</code></pre>
-    <form action="/test_model">
+    <form action="/result_model">
         <button disabled type="submit" id="btn-test-model" class="btn btn-primary">
-            Analisar Modelo e realizar testes
+            Verificar resultado do modelo
         </button>
     </form>
 </div>
