--- a/autotrain_with_llm/ui/statics/styles/result_model.css
+++ b/autotrain_with_llm/ui/statics/styles/result_model.css
@@ -2,13 +2,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 80%;
+    align-self: center;
 }
 
-.graphs{
+.graphs {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .loss-accuracy{
     margin: 10px;
+}
+
+#container-steps {
+    margin: 35px auto;
 }
