--- a/autotrain_with_llm/ui/templates/result_model.html
+++ b/autotrain_with_llm/ui/templates/result_model.html
@@ -22,11 +22,11 @@
     <span><b>Test Accuracy:</b> {{test_accuracy}}%</span>
   </div>
   <div class="graphs">
-    <img src="{{ url_for('static', path='images/confusion_matrix.png') }}" alt="Matriz Confusão", style="width: 35%; height: auto;">
-    <img src="{{ url_for('static', path='images/Training and validation Loss and Accuracy.png') }}" alt="Validation Loss e Accuracy", style="width: 40%; height: auto;">
+    <img src="{{ url_for('static', path='images/confusion_matrix.png') }}" alt="Matriz Confusão", style="width: 37%; height: auto;">
+    <img src="{{ url_for('static', path='images/Training and validation Loss and Accuracy.png') }}" alt="Validation Loss e Accuracy", style="width: 37%; height: auto;">
   </div>
-  <form action="/test_model">
-    <button class="btn btn-primary">Testar modelo</button>
+  <form action="/test_model" style="align-self: end;">
+    <button class="btn btn-primary" style="margin-bottom: 5px;">Testar modelo</button>
   </form>
 </div>
 <link rel="stylesheet" href="{{ url_for('static', path='styles/result_model.css') }}">
