--- a/autotrain_with_llm/ui/templates/form.html
+++ b/autotrain_with_llm/ui/templates/form.html
@@ -60,7 +60,7 @@
         <select id="select-dataset-configuration" class="form-select" name="configuration-mode">
           <option value="absolute-path-section" selected>Caminho absoluto</option>
           <option value="dataset-upload-section">Upload de Dataset</option>
-          <option value="create-classes-section">Criar classes manualmente</option>
+          <!-- <option value="create-classes-section">Criar classes manualmente</option> -->
         </select>
       </div>
     </div>
