--- a/autotrain_with_llm/ui/statics/styles/dataset.css
+++ b/autotrain_with_llm/ui/statics/styles/dataset.css
@@ -2,7 +2,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    width: 80vw;
+    /* width: 80vw; */
     align-self: center;
     gap: 15px;
 }
