--- a/autotrain_with_llm/ui/statics/styles/home.css
+++ b/autotrain_with_llm/ui/statics/styles/home.css
@@ -19,6 +19,11 @@ body {
     gap: 10px;
 }
 
+.tool-details-text {
+    display: flex;
+    flex-direction: column;
+}
+
 .tag-differential {
     padding: 8px 16px;
     border-radius: 24px;
