--- a/autotrain_with_llm/ui/templates/dataset.html
+++ b/autotrain_with_llm/ui/templates/dataset.html
@@ -13,6 +13,8 @@
   </ul>
 </div>
 
+<!-- Configuração atual do modelo -->
+
 <div class="config-content">
   <div>
     <h4>Configuração atual do modelo</h4>
@@ -39,6 +41,8 @@
       </div>
     </div>
   </div>
+
+  <!-- Album de imagens do dataset de treinamento e validação -->
   <div class="container">
     <span><strong>Dataset de treinamento</strong></span>
     <div class="training-dataset">
