--- a/autotrain_with_llm/ui/templates/logs.html
+++ b/autotrain_with_llm/ui/templates/logs.html
@@ -13,14 +13,46 @@
     </ul>
 </div>
 <h4 class="title-page">Logs</h4>
+<!-- Configuração atual do modelo -->
+
+<div class="config-content">
+    <div>
+      <h4>Configuração atual do modelo</h4>
+      <div id="model_config">
+        <div class="parameter">
+          <span class="model_name_label"><b>Modelo Selecionado:</b></span>
+          <span class="model_name_value"></span>
+        </div>
+        <div class="parameter">
+          <span class="epoch_label"><b>Epoch:</b></span>
+          <span class="epoch_value">1</span>
+        </div>
+        <div class="parameter">
+          <span class="seed_label"><b>Seeds:</b></span>
+          <span class="seed_value"></span>
+        </div>
+        <div class="parameter">
+          <span class="batch_size_label"><b>Batch Size:</b></span>
+          <span class="batch_size_value"></span>
+        </div>
+        <div class="parameter">
+          <span class="shuffle_label"><b>Shuffle:</b></span>
+          <span class="shuffle_value"></span>
+        </div>
+      </div>
+    </div>  
+
+
 <div id="code-block">
-    <form action="/reset-logs">
-        <button id="clean-log" type="submit"><i class="bi bi-eraser"></i>Limpar Logs</button>
-    </form>
     <pre id="log-content"><code id="python-code" class="language-python">{{ function_code }}</code></pre>
-    <form action="/result_model">
+    <form action="/result_model" class="go-to-result-model-step">
         <button disabled type="submit" id="btn-test-model" class="btn btn-primary">
             Verificar resultado do modelo
+        </button>
+    </form>
+    <form action="/form", class="go-to-config-step" style="display: none;">
+        <button type="submit" id="btn-test-model" class="btn btn-primary">
+            Voltar para a configuração do modelo
         </button>
     </form>
 </div>
