--- a/autotrain_with_llm/ui/templates/test_model.html
+++ b/autotrain_with_llm/ui/templates/test_model.html
@@ -17,15 +17,13 @@
 <div class="test-container">
   <div class="test-header">
     <span><strong>Upload de imagem para teste</strong></span>
-    <form action="/">
-      <button type="submit" class="btn btn-primary">Treinar um novo modelo</button>
-    </form>
+    <button type="submit" class="btn btn-danger" onclick="document.getElementById('confirmDialog').showModal()">Treinar um novo modelo</button>
   </div>
   <div class="test-result-container">
     <div class="test-input-container">
       <label for="file" class="file-input">
         <div class="drop-zone" id="drop-zone">
-          <img class="source-code-icon" src="{{ url_for('static', path='images/upload_file_icon.png') }}" alt="Ícone de código fonte" style="margin-left: 2px;">
+          <img class="upload-file-icon" src="{{ url_for('static', path='images/upload_file_icon.png') }}" alt="Ícone de código fonte" style="margin-left: 2px;">
           <p>Arraste o arquivo aqui.</p>
           <p>ou</p>
           <p class="choose-file">Escolher arquivo</p>
@@ -62,6 +60,17 @@
     </div>
   </div>
 </div>
+
+<!-- DIALOG GENERATE NEW TRAINING -->
+<dialog id="confirmDialog">
+    <h2>Iniciar um novo treinamento</h2>
+    <p>Por favor, confirme que você deseja iniciar um novo treinamento. Isso o redirecionará para a tela de home para iniciar o fluxo novamente!</p>
+    <div class="button-container">
+        <button class="button cancel" onclick="document.getElementById('confirmDialog').close()">Cancelar</button>
+        <button class="button continue" onclick="window.location.href='/'">Continuar</button>
+    </div>
+</dialog>
+
 <script src="{{ url_for('static', path='/scripts/drag_drop_input_file.js') }}"></script>
 <script src="{{ url_for('static', path='/scripts/test_model.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', path='styles/drag_drop_input_file.css') }}">
